--- a/style.css
+++ b/style.css
@@ -103,15 +103,16 @@ body {
 }
 .menu {
   display: flex;
-  padding-top: 2rem;
+  padding: 1rem 0;
+  align-items: center;
   justify-content: center;
 }
 .main {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(28rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
   grid-auto-rows: minmax(30rem, 1fr);
-  gap: 2rem;
-  padding: 2rem;
+  gap: 1.5rem;
+
 }
 /* BOOKS */
 .book {
