--- a/style.css
+++ b/style.css
@@ -30,9 +30,11 @@
 }
 /* TEXT */
 h1.title {
-  font-size: 4rem;
+  font-size: 3.5rem;
   flex: 1;
   color: black;
+  letter-spacing: 2px;
+  font-weight: 700;
 }
 h3 {
   font-weight: 500;
@@ -87,7 +89,7 @@ body {
   min-height: 100vh;
 
   display: grid;
-  grid-template-rows: 10rem 1fr 5rem;
+  grid-template-rows: 8rem 1fr 4rem;
 }
 .header {
   padding: 0 2rem;
@@ -103,7 +105,7 @@ body {
 }
 .menu {
   display: flex;
-  padding: 1rem 0;
+  padding-top: 1.5rem;
   align-items: center;
   justify-content: center;
 }
@@ -112,6 +114,7 @@ body {
   grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
   grid-auto-rows: minmax(30rem, 1fr);
   gap: 1.5rem;
+  padding: 1.5rem 0;
 
 }
 /* BOOKS */
